# tokenwise

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  DELIVERY.md  Dockerfile  LICENSE  PLAN.md  PROJECT_STATUS.md  README.md  RETROSPECTIVE.md  STRUCTURE.md  TODO.md  config.cn.yaml  config.yaml  docker-compose.yml  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml
deploy/: README.md  tls.sh  tokenwise.service
docs/: reddit.md  show-hn.md  v2ex.md
src/: config.rs  grpc_proxy.rs  import.rs  lib.rs  license.rs  main.rs  multi_user.rs  webhooks.rs
src/admin/: api.rs  chat_widget.rs  metrics.rs  mod.rs
src/cache/: mod.rs
src/cost/: calculator.rs  mod.rs
src/proxy/: anthropic_format.rs  classifier.rs  mod.rs  router.rs  server.rs  tee_stream.rs
src/recording/: mod.rs  model.rs  store.rs
templates/: 404.html  429.html  500.html  _base.css  calls.html  dashboard.html  savings.html  settings.html  setup.html
templates/cn/: 404.html  429.html  500.html  calls.html  dashboard.html  savings.html  settings.html  setup.html
tests/: e2e.sh  integration_tests.rs  stress.py  stress.sh
